Agregado pytesseract al requeriments

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 wheel
 setuptools
 python-ldap
-tesseract-ocr
-tesseract-ocr-eng
-tesseract-ocr-spa
+pytesseract
+#tesseract-ocr
+#tesseract-ocr-eng
+#tesseract-ocr-spa
 pyocr
 wand
